--- a/myApp/www/templates/android/menu.html
+++ b/myApp/www/templates/android/menu.html
@@ -1,3 +1,4 @@
+<link href="../../styles/index.css" rel="stylesheet">
 
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
